# Rust-MapReduce

./: Cargo.toml  README.md  test-map-reduce.sh  test-mr.sh
proto/: rpc.proto
src/: client.rs  coordinator.rs  helper.rs  main.rs  map_reduce.rs  run.rs  server.rs  test.rs
