[package]
name = "map_reduce"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]] # Bin to run the HelloWorld gRPC server
name = "helloworld-server"
path = "src/server.rs"

[[bin]] # Bin to run the HelloWorld gRPC client
name = "helloworld-client"
path = "src/client.rs"

[[bin]]
name = "sequential"
path = "src/main.rs"

[[bin]]
name = "test"
path = "src/test.rs"

[dependencies]
futures = "0.3"
tonic = "0.9"
prost = "0.11"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0.96"
serde = { version = "1.0", features = ["derive"] }
triggered = "0.1.2"



[build-dependencies]
tonic-build = "0.9"
